add addList function

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 
             <li class="list-group-item" style="border: none;">
               <div class="input-group row g-2">
-                <input id="inputName" type="text" aria-label="name" class="form-control col-md-4 " placeholder="Namn">
-                <input id="inputPhone" type="text" aria-label="phone" class="form-control col-md-4" placeholder="Telefon">
+                <input id="nameInList1" type="text" aria-label="name" class="form-control col-md-4 " disabled>
+                <input id="phoneInList1" type="text" aria-label="phone" class="form-control col-md-4" disabled>
                 <div class="col-md-4">
-                <button id="update" type="submit" class="btn btn-secondary" >Ändra</button>
-                <button id="delete" type="submit" class="btn btn-danger" >Radera</button>
+                <button id="update1" type="submit" class="btn btn-secondary" >Ändra</button>
+                <button id="delete1" type="submit" class="btn btn-danger" >Radera</button>
               </div>
               </div>
             </li>
 
             <li class="list-group-item" style="border: none;">
               <div class="input-group row g-2">
-                <input id="inputName" type="text" aria-label="name" class="form-control col-md-4 " placeholder="Namn">
-                <input id="inputPhone" type="text" aria-label="phone" class="form-control col-md-4" placeholder="Telefon">
+                <input id="nameInList2" type="text" aria-label="name" class="form-control col-md-4 " placeholder="Namn">
+                <input id="phoneInList1" type="text" aria-label="phone" class="form-control col-md-4" placeholder="Telefon">
                 <div class="col-md-4">
-                <button id="update" type="submit" class="btn btn-secondary" >Ändra</button>
-                <button id="delete" type="submit" class="btn btn-danger" >Radera</button>
+                <button id="update2" type="submit" class="btn btn-secondary" >Ändra</button>
+                <button id="delete2" type="submit" class="btn btn-danger" >Radera</button>
               </div>
               </div>
             </li>
