--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         --> 
 
         <div class="container mt-3  m-sm-5 ">
-          <ol class="list-group list-group-numbered">
-
+          <ol id="contact" class="list-group list-group-numbered">
+<!--
             <li class="list-group-item" style="border: none;">
               <div class="input-group row g-2">
                 <input id="nameInList1" type="text" aria-label="name" class="form-control col-md-4 " disabled>
@@ -82,6 +82,7 @@
               </div>
               </div>
             </li>
+            -->
 
           </ol>
 
