Add displayErrorMessage function

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <button id="create" type="submit" class="btn btn-primary" >Skapa</button>
             <button id="deleteList" type="submit" class="btn btn-danger" >Radera lista</button>
           </div>
+          <div class="invalid-feedback" style="display: none; color: rgb(226, 43, 58);">Får ej skapa tom kontakt</div>
           </div>
 
 
