deleteRow has error: cannot delete last row from array

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <div class="container mt-3  m-sm-5 ">
           <ol id="contact" class="list-group list-group-numbered">
 <!--
+  Here you can print out contacts 
+
             <li class="list-group-item" style="border: none;">
               <div class="input-group row g-2">
                 <input id="nameInList1" type="text" aria-label="name" class="form-control col-md-4 " disabled>
