add phone validation and functions

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <input id="inputPhone" type="text" aria-label="phone" class="form-control col-md-4 " placeholder="Telefon">
             <div class="col-md-3 float-start">
             <button id="create" type="submit" class="btn btn-primary" >Skapa</button>
-            <button id="deleteList" type="submit" class="btn btn-danger" >Radera lista</button>
-          </div>
-          <div class="invalid" style="visibility:hidden; color: rgb(226, 43, 58);">Får ej skapa tom kontakt</div>
+            <button id="deleteList" type="submit" class="btn btn-danger" disabled>Radera lista</button>
+            </div>
+          <div class="invalid" style="visibility:visible; color: rgb(226, 43, 58);"></div>
           </div>
 
 
