--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Kontaktlista</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         
         <div class="container m-sm-5 ">
 
-            <h3 class="mt-3 mb-sm-3">Kontaktlista</h3>
+            <h3 class="mt-3 mb-sm- fuwafuwa">Kontaktlista</h3>
 
           <div class="input-group row g-2 " >
             <input id="inputName" type="text" aria-label="name" class="form-control col-md-4 " placeholder="Namn">
