edit to ccorrect spelling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <span class='text' style="animation-delay: 0.4s">n</span>
               <span class='text' style="animation-delay: 0.6s">t</span>
               <span class='text' style="animation-delay: 0.8s">a</span>
-              <span class='text' style="animation-delay: 1s">c</span>
+              <span class='text' style="animation-delay: 1s">k</span>
               <span class='text' style="animation-delay: 1.2s">t</span>
               <span class='text' style="animation-delay: 1.4s">l</span>
               <span class='text' style="animation-delay: 1.6s">i</span>
